docs: instrucciones de empaquetado (app portable y instalador con WiX)